[gd_scene load_steps=19 format=3 uid="uid://3fyim0l6np62"]

[ext_resource type="Script" uid="uid://cjhiay4bf2cd2" path="res://scripts/player.gd" id="1_pyx2s"]
[ext_resource type="Texture2D" uid="uid://c2ytyvlffsw63" path="res://assets/Tilemap/monochrome_tilemap_transparent.png" id="2_4csp1"]
[ext_resource type="AudioStream" uid="uid://ckqtbooawf6tr" path="res://assets/Sound/Efecto de sonido Hit.wav" id="3_qhqgy"]
[ext_resource type="AudioStream" uid="uid://3fgo0e3h2axm" path="res://assets/Sound/Jump.wav" id="4_dqkch"]
[ext_resource type="AudioStream" uid="uid://c22qra656t2xf" path="res://assets/Sound/Pickup.wav" id="5_qlg0r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_83sqk"]
radius = 5.0065

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("2_4csp1")
region = Rect2(0, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("2_4csp1")
region = Rect2(85, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("2_4csp1")
region = Rect2(102, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwhj3"]
atlas = ExtResource("2_4csp1")
region = Rect2(0, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pevnn"]
atlas = ExtResource("2_4csp1")
region = Rect2(0, 221, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c45xi"]
atlas = ExtResource("2_4csp1")
region = Rect2(0, 238, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwpop"]
atlas = ExtResource("2_4csp1")
region = Rect2(0, 255, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyd3i"]
atlas = ExtResource("2_4csp1")
region = Rect2(17, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mhdy"]
atlas = ExtResource("2_4csp1")
region = Rect2(34, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvjxi"]
atlas = ExtResource("2_4csp1")
region = Rect2(51, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_got38"]
atlas = ExtResource("2_4csp1")
region = Rect2(68, 204, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_4nk3f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}],
"loop": true,
"name": &"celebration",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwhj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pevnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c45xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwpop")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyd3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mhdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvjxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_got38")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[node name="player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_pyx2s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.255)
shape = SubResource("CircleShape2D_83sqk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_4nk3f")
animation = &"celebration"
autoplay = "idle"
frame_progress = 0.242545

[node name="hitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qhqgy")

[node name="jumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dqkch")

[node name="pickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_qlg0r")
